[package]
name = "processortrace"
version = "0.0.1"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
description = "Rust library to set-up Intel processor trace for getting raw trace data."

repository = "https://github.com/gz/processor-trace"
documentation = "http://docs.rs/processortrace"
readme = "README.md"
keywords = ["x86-64", "x86", "processor", "trace", "hardware"]
license = "MIT"

[dependencies]
x86 = "0.19"
driverkit = { path = "../driverkit" }
log = "0.4"
rlibc = "1.0.0"
matches = "0.1.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = "0.*"
#xed-sys = "0.1.1"

[target.'cfg(unix)'.dev-dependencies]
env_logger = "0.5.10"
libc = "0.2"
byteorder = "1.2"